tests/baselines/reference/parserES5SymbolProperty6.errors.txt
tests/cases/conformance/parser/ecmascript5/Symbols/parserES5SymbolProperty6.ts(2,6): error TS2304: Cannot find name 'Symbol'.


==== tests/cases/conformance/parser/ecmascript5/Symbols/parserES5SymbolProperty6.ts (1 errors) ====
    class C {
        [Symbol.toStringTag]: string = "";
         ~~~~~~
!!! error TS2304: Cannot find name 'Symbol'.
    }